# ood-api

./: .gitignore  .rubocop.yml  CHANGELOG.md  Gemfile  README.md  appverse.yml  config.ru  manifest.yml
.github/workflows/: ci.yml
app/: api.rb  mcp_server.rb
app/handlers/: audit.rb  clusters.rb  context.rb  env.rb  errors.rb  files.rb  jobs.rb
app/mcp_tools/: clusters.rb  context.rb  env.rb  files.rb  jobs.rb
dashboard-plugin/initializers/: ood_api.rb
dashboard-plugin/lib/: api_token.rb  api_tokens_controller.rb
dashboard-plugin/locales/: en.yml
dashboard-plugin/views/api_tokens/: index.html.erb
docs/: api.md  development.md  mcp-oauth.md  user-guide.md
lib/: api_token.rb
mcp/: README.md  pyproject.toml  requirements.txt  server.py  test_server.py
test/: api_test.rb  api_token_test.rb  env_api_test.rb  files_api_test.rb  mcp_server_test.rb  test_helper.rb
test/handlers/: audit_test.rb  clusters_test.rb  context_test.rb  env_test.rb  files_test.rb  jobs_test.rb
test/mcp_tools/: clusters_test.rb  context_test.rb  env_test.rb  files_test.rb  jobs_test.rb
