[project]
name = "ood-mcp"
version = "0.1.0"
description = "MCP Server for Open OnDemand HPC cluster management"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.scripts]
ood-mcp = "server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
